<resources>
    <string name="app_name">ImmuniNation</string>
    <string name="text_login">Log in</string>
    <string name="digits_email">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@.</string>
    <string name="hint_email">Email</string>
    <string name="digits_password">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890!@#$%^*-=_+:;,.?</string>
    <string name="hint_password">Password</string>
    <string name="text_register">Create an Account</string>
    <string name="digits_name">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="text_button_register">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_admin_schedule">Admin Schedule</string>
    <string name="title_admin_request">Admin Request</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_profile">Profile</string>
    <string name="text_button_logout">Log out</string>
    <string name="text_select">Select a date</string>
    <string name="hint_enter">Enter a value</string>
    <string name="text_button_create">Create Slot</string>
    <string name="text_select_1">Select your birthdate</string>
    <string name="digits_contact">0123456789</string>
    <string name="hint_enter_1">Enter your contact no.</string>
    <string name="text_upload">Upload your valid ID</string>
    <string name="text_upload_1">Upload the selfie</string>
    <string name="text_button_create_1">Submit Request</string>
    <string name="text_button_reject">Reject</string>
    <string name="text_button_accept">Accept</string>
    <string name="text_button_remove">Remove from list</string>

    <string-array name="VaccineNames">
        <item>Select a Vaccine</item>
        <item>Pfizer-BioNTech</item>
        <item>Moderna</item>
        <item>Johnson and Johnson</item>
        <item>SinoVac</item>
        <item>AstraZeneca</item>
    </string-array>

    <string-array name="VaccineSites">
        <item>Select Vaccine Site</item>
        <item>Arenas Complex</item>
        <item>City Mall</item>
        <item>Manzon</item>
        <item>Talang</item>
        <item>Pagal</item>
    </string-array>

    <string-array name="UserCategories">
        <item>Select Priority Category</item>
        <item>A1 - Health Workers</item>
        <item>A2 - Senior Citizens</item>
        <item>A3 - Person with Comorbidities</item>
        <item>A4 - Economic Frontliners</item>
        <item>A5 - Indigent Sector</item>
        <item>B1 - Teachers, Social Workers</item>
        <item>B2 - Other Government Workers</item>
        <item>B3 - Other Essential Workers</item>
        <item>B4 - Socio-Demographic Groups</item>
        <item>B5 - Overseas Filipino</item>
        <item>B6 - Other Workforce</item>
        <item>C - Rest of the Filipino Population</item>
    </string-array>

    <string-array name="UserStreets">
        <item>Select Street</item>
        <item>Abanon</item>
        <item>Agdao</item>
        <item>Ano</item>
        <item>Anando</item>
        <item>Antipangol</item>
        <item>Aponit</item>
        <item>Bacnar</item>
        <item>Balaya</item>
        <item>Balayong</item>
        <item>Baldog</item>
        <item>Balite Sur</item>
        <item>Balococ</item>
        <item>Bani</item>
        <item>Bocboc</item>
        <item>Bugallon-Posadas</item>
        <item>Bogaoan</item>
        <item>Bolingit</item>
        <item>Bolosan</item>
        <item>Bonifacio</item>
        <item>Buenglat</item>
        <item>Burgos-Padlan</item>
        <item>Cacaritan</item>
        <item>Caingal</item>
        <item>Calobaoan</item>
        <item>Calomboyan</item>
        <item>Burgos-Padlan</item>
        <item>Cacaritan</item>
        <item>Caingal</item>
        <item>Calobaoan</item>
        <item>Calomboyan</item>
        <item>Burgos-Padlan</item>
        <item>Cacaritan</item>
        <item>Caingal</item>
        <item>Calobaoan</item>
        <item>Calomboyan</item>
        <item>Isla</item>
        <item>Libas</item>
        <item>Lilimasan</item>
        <item>Longos</item>
        <item>Lucban</item>
        <item>Mabalbalino</item>
        <item>Mabini</item>
        <item>Magtaking</item>
        <item>Malacañang</item>
        <item>Maliwara</item>
        <item>M.Soriano</item>
        <item>Mamarlao</item>
        <item>Manzon</item>
        <item>Matangdem</item>
        <item>Mestizo Norte</item>
        <item>Naguilayan</item>
        <item>Nelintap</item>
        <item>Padilla-Gomez</item>
        <item>Pagal</item>
        <item>Palaming</item>
        <item>Palaris</item>
        <item>Palospos</item>
        <item>Pangalangan</item>
        <item>Pangoloan</item>
        <item>Pangpang</item>
        <item>Paitan-Panoypoy</item>
        <item>Parayao</item>
        <item>Payapa</item>
        <item>Payar</item>
        <item>Perez Boulevard</item>
        <item>PNR Site</item>
        <item>Polo</item>
        <item>Quezon Boulevard</item>
        <item>Quintong</item>
        <item>Rizal Avenue</item>
        <item>Roxas Boulevard</item>
        <item>Salinap</item>
        <item>San Juan</item>
        <item>San Pedro</item>
        <item>Sapinit</item>
        <item>Supo</item>
        <item>Talang</item>
        <item>Taloy</item>
        <item>Tamayo</item>
        <item>Tandoc</item>
        <item>Tarece</item>
        <item>Tarectec</item>
        <item>Tayambani</item>
        <item>Tebag</item>
        <item>Turac</item>
        <item>Tangdang Sora</item>
    </string-array>

    <string-array name="VaccineArmSideEffects">
        <item>In the arm where you got the shot: \n\n•Pain\n•Redness\n•Swelling</item>
        <item>In the arm where you got the shot: \n\n•Pain\n•Redness\n•Swelling</item>
        <item>In the arm where you got the shot: \n\n•Pain\n•Redness\n•Swelling</item>
        <item>In the arm where you got the shot: \n\n•Pain\n•Redness\n•Swelling</item>
        <item>In the arm where you got the shot: \n\n•Pain\n•Redness\n•Swelling</item>
    </string-array>

    <string-array name="VaccineBodySideEffects">
        <item>Throughout the rest of your body:\n\n•Tiredness\n•Headache\n•Muscle pain\n•Chills\n•Fever\n•Nausea</item>
        <item>Throughout the rest of your body:\n\n•Tiredness\n•Headache\n•Muscle pain\n•Chills\n•Fever\n•Nausea</item>
        <item>Throughout the rest of your body:\n\n•Tiredness\n•Headache\n•Muscle pain\n•Chills\n•Fever\n•Nausea</item>
        <item>Throughout the rest of your body:\n\n•Fever\n•Fatigue\n•Muscle pain\n•Diarrhea</item>
        <item>Throughout the rest of your body:\n\n•Fever\n•Discomfort\n•Fatigue\n•Muscle pain\n•Diarrhea\n•Nausea</item>
    </string-array>

    <string-array name="VaccineInformation">
        <item>Pfizer-BioNTech (COMIRNATY) vaccine was 95% effective at preventing laboratory-confirmed infection with the virus that causes COVID-19 in people who received two doses and had no evidence of being previously infected.</item>
        <item>Based on evidence from clinical trials, in people aged 18 years and older, the Moderna vaccine was 94.1% effective at preventing laboratory-confirmed COVID-19 infection in people who received two doses and had no evidence of being previously infected.</item>
        <item>The JandJ/Janssen COVID-19 Vaccine was 66.3% effective in clinical trials (efficacy) at preventing laboratory-confirmed COVID-19 infection in people who received the vaccine. People had the most protection 2 weeks after getting vaccinated.</item>
        <item>A large phase 3 trial in Brazil showed that two doses of 14 days interval, had an efficacy of 51% against symptomatic SARS-CoV-2 infection, 100% against severe COVID-19, and 100% against hospitalization starting 14 days after receiving the second dose.</item>
        <item>The AZD1222 vaccine against COVID-19 has an efficacy of 63.09% against symptomatic COVID-19 infection. Longer dose intervals within the 8 to 12 weeks range are associated with greater vaccine efficacy.</item>
    </string-array>

    <string-array name="VaccineManufacturers">
        <item>Pfizer, Inc., and BioNTech</item>
        <item>Moderna, NIAID</item>
        <item>Janssen Pharmaceutical Companies</item>
        <item>Sinovac</item>
        <item>Oxford Uni-AstraZeneca</item>
    </string-array>

    <string-array name="VaccineShots">
        <item>2 doses at least 21 days apart</item>
        <item>2 doses at least 28 days apart</item>
        <item>1 dose</item>
        <item>2 doses at least 2–4 weeks apart</item>
        <item>2 doses at least 4–12 weeks apart</item>
    </string-array>

    <string-array name="VaccineTypes">
        <item>messenger RNA (mRNA) vaccines</item>
        <item>messenger RNA (mRNA) vaccines</item>
        <item>Viral Vector</item>
        <item>Inactive COVID-19 Virus</item>
        <item>Viral Vector</item>
    </string-array>
</resources>