<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".CreateRequestActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Schedule Request Form"
            android:textColor="?attr/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Category"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_schedule" />

        <LinearLayout
            android:id="@+id/linear_user_category"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:background="@color/color_chinese_white"
            app:layout_constraintTop_toBottomOf="@id/tv_category">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_category" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:background="?attr/colorOnPrimary" />

            <Spinner
                android:id="@+id/s_user_category"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="?attr/colorPrimary" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Street"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_user_category" />

        <LinearLayout
            android:id="@+id/linear_user_street"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:background="@color/color_chinese_white"
            app:layout_constraintTop_toBottomOf="@id/tv_street">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_location" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:background="?attr/colorOnPrimary" />

            <Spinner
                android:id="@+id/s_user_street"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="?attr/colorPrimary" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Date of Birth"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_user_street" />

        <LinearLayout
            android:id="@+id/linear_user_birth_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:background="@color/color_chinese_white"
            app:layout_constraintTop_toBottomOf="@id/tv_date">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_date" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:background="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/tv_user_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_select_1"
                android:padding="15dp"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Contact No."
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_user_birth_date" />

        <LinearLayout
            android:id="@+id/linear_user_contact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:background="@color/color_chinese_white"
            app:layout_constraintTop_toBottomOf="@id/tv_contact">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_contact" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:background="?attr/colorOnPrimary" />

            <EditText
                android:id="@+id/et_user_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:digits="@string/digits_contact"
                android:hint="@string/hint_enter_1"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="15dp"
                android:textColor="?attr/colorSecondary"
                android:textColorHint="?attr/colorSecondary"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Valid ID Photo"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_user_contact" />

        <LinearLayout
            android:id="@+id/linear_user_valid_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:background="@color/color_chinese_white"
            app:layout_constraintTop_toBottomOf="@id/tv_valid">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_id" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:background="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/tv_user_valid_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_upload"
                android:padding="15dp"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_selfie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Selfie Photo with Holding ID Card"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_user_valid_id" />

        <LinearLayout
            android:id="@+id/linear_user_selfie_with_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:background="@color/color_chinese_white"
            app:layout_constraintTop_toBottomOf="@id/tv_selfie">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_selfie" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:background="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/tv_user_selfie_with_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_upload_1"
                android:padding="15dp"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_create_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/create_negative_180_angle_button"
            android:text="@string/text_button_create_1"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintTop_toBottomOf="@id/linear_user_selfie_with_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

